--- a/app/src/main/res/layout/z_list_report_comment.xml
+++ b/app/src/main/res/layout/z_list_report_comment.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="回報訊息"
+            android:text="檢舉評論"
             android:textSize="@dimen/font_size" />
 
         <Button
