--- a/app/src/main/res/layout/z_report_message_content.xml
+++ b/app/src/main/res/layout/z_report_message_content.xml
@@ -14,7 +14,7 @@
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="回報錯誤"
+        app:title="回報訊息"
 
         />
 
