--- a/app/src/main/res/layout/check_opponent.xml
+++ b/app/src/main/res/layout/check_opponent.xml
@@ -101,7 +101,7 @@
                             android:text="你的資訊"
                             android:textColor="@android:color/black"
                             android:textSize="@dimen/font_size"
-                            app:layout_constraintStart_toEndOf="@+id/textView23"
+                            app:layout_constraintStart_toEndOf="@+id/loginPrompt"
                             app:layout_constraintTop_toBottomOf="@+id/textView12" />
                     </TableRow>
                 </TableLayout>
