--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,9 @@
                             android:gravity="center"
                             android:text="@string/email"
                             android:textColor="@android:color/black"
-                            android:textSize="@dimen/font_size" />
+                            android:textSize="@dimen/font_size"
+
+                            />
 
                         <EditText
                             android:id="@+id/emailEditText"
@@ -58,7 +60,8 @@
                             android:layout_height="45dp"
                             android:layout_weight="2"
                             android:ems="10"
-                            android:inputType="textEmailAddress" />
+                            android:inputType="textEmailAddress"
+                            />
                     </TableRow>
 
                     <TableRow
@@ -101,19 +104,6 @@
                     android:layout_below="@+id/tableLayout"
                     android:layout_weight="1"
                     android:text="@string/login" />
-
-                <TextView
-                    android:id="@+id/loginPrompt"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_above="@+id/storeLoginButton"
-                    android:layout_alignParentStart="true"
-                    android:layout_span="2"
-
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/font_size" />
 
             </RelativeLayout>
         </ScrollView>
