--- a/app/src/main/res/layout/item_comment_listitem.xml
+++ b/app/src/main/res/layout/item_comment_listitem.xml
@@ -8,6 +8,45 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/commentDate2"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text=" - "
+        app:layout_constraintBottom_toBottomOf="@+id/storeReply"
+        app:layout_constraintEnd_toStartOf="@+id/commentDate"
+        app:layout_constraintTop_toTopOf="@+id/storeReply"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/commentText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:text="評論內容........."
+        app:layout_constraintBottom_toBottomOf="@+id/ScoreTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/colon"
+        app:layout_constraintTop_toTopOf="@+id/ScoreTextView" />
+
+    <TextView
+        android:id="@+id/replyTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="店家回覆 : "
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/commentMember" />
+
+    <TextView
+        android:id="@+id/storeReply"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/replyTitle"
+        app:layout_constraintEnd_toStartOf="@+id/commentDate2"
+        app:layout_constraintStart_toEndOf="@+id/replyTitle"
+        app:layout_constraintTop_toTopOf="@+id/replyTitle" />
+
+    <TextView
         android:id="@+id/commentMember"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,84 +58,30 @@
     <TextView
         android:id="@+id/commentDate"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="43dp"
+        android:layout_height="0dp"
         android:text="2018/03/10"
-        app:layout_constraintStart_toEndOf="@+id/dash"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/storeReply"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/storeReply" />
 
     <TextView
         android:id="@+id/colon"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text=":"
+        app:layout_constraintBottom_toBottomOf="@+id/ScoreTextView"
+        app:layout_constraintStart_toEndOf="@+id/ScoreTextView"
+        app:layout_constraintTop_toTopOf="@+id/ScoreTextView" />
+
+    <TextView
+        android:id="@+id/ScoreTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:text="(☆☆☆☆☆)"
+        app:layout_constraintBottom_toBottomOf="@+id/commentMember"
         app:layout_constraintStart_toEndOf="@+id/commentMember"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/commentMember" />
 
-    <TextView
-        android:id="@+id/dash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="43dp"
-        android:text="-"
-        app:layout_constraintStart_toEndOf="@+id/reportButton"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/commentText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="評論內容........."
-        app:layout_constraintStart_toEndOf="@+id/colon"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/editButton"
-        android:layout_width="43dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
-        android:text="編輯"
-        android:textSize="8sp"
-        app:layout_constraintStart_toEndOf="@+id/colon"
-        app:layout_constraintTop_toBottomOf="@+id/commentText" />
-
-    <Button
-        android:id="@+id/reportButton"
-        android:layout_width="43dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:text="檢舉"
-        android:textSize="8sp"
-        app:layout_constraintStart_toEndOf="@+id/deleteButton"
-        app:layout_constraintTop_toBottomOf="@+id/commentText" />
-
-    <Button
-        android:id="@+id/deleteButton"
-        android:layout_width="43dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:text="刪除"
-        android:textSize="8sp"
-        app:layout_constraintStart_toEndOf="@+id/replyButton"
-        app:layout_constraintTop_toBottomOf="@+id/commentText" />
-
-    <Button
-        android:id="@+id/replyButton"
-        android:layout_width="43dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:text="回覆"
-        android:textSize="8sp"
-        app:layout_constraintStart_toEndOf="@+id/editButton"
-        app:layout_constraintTop_toBottomOf="@+id/commentText" />
 </android.support.constraint.ConstraintLayout>
