--- a/app/src/main/res/layout/activity_2_check_storeinfo.xml
+++ b/app/src/main/res/layout/activity_2_check_storeinfo.xml
@@ -25,7 +25,7 @@
         <!-- The navigation drawer -->
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/constraintLayout1"
+            android:id="@+id/contentView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimaryDark">
