--- a/app/src/main/res/layout/activity_2_check_storeinfo.xml
+++ b/app/src/main/res/layout/activity_2_check_storeinfo.xml
@@ -27,8 +27,7 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/contentView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/storeIcon"
