--- a/app/src/main/res/layout/activity_edit_photo.xml
+++ b/app/src/main/res/layout/activity_edit_photo.xml
@@ -75,16 +75,12 @@
                             android:id="@+id/textView7"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:paddingBottom="10dp"
+                            android:paddingTop="10dp"
                             android:text="@string/chooseOtherPhoto"
                             android:textColor="@android:color/black"
                             android:textSize="18sp" />
 
-                        <Button
-                            android:id="@+id/quickChooseButton"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="@string/quickChoose" />
                     </TableRow>
 
                     <TableRow
@@ -95,6 +91,7 @@
                             android:id="@+id/otherImageView1"
                             android:layout_width="160dp"
                             android:layout_height="90dp"
+                            android:layout_marginBottom="5dp"
                             android:layout_weight="1"
                             app:srcCompat="@drawable/ic_image_add" />
 
@@ -102,8 +99,9 @@
                             android:id="@+id/otherImageView2"
                             android:layout_width="160dp"
                             android:layout_height="90dp"
+                            android:layout_marginBottom="5dp"
                             android:layout_weight="1"
-                            app:srcCompat="@drawable/ic_image_add" />
+                            app:srcCompat="@color/cast_expanded_controller_ad_container_white_stripe_color" />
                     </TableRow>
 
                     <TableRow
@@ -114,15 +112,17 @@
                             android:id="@+id/otherImageView3"
                             android:layout_width="160dp"
                             android:layout_height="90dp"
+                            android:layout_marginBottom="5dp"
                             android:layout_weight="1"
-                            app:srcCompat="@drawable/ic_image_add" />
+                            app:srcCompat="@color/cast_expanded_controller_ad_container_white_stripe_color" />
 
                         <ImageView
                             android:id="@+id/otherImageView4"
                             android:layout_width="160dp"
                             android:layout_height="90dp"
+                            android:layout_marginBottom="5dp"
                             android:layout_weight="1"
-                            app:srcCompat="@drawable/ic_image_add" />
+                            app:srcCompat="@color/cast_expanded_controller_ad_container_white_stripe_color" />
                     </TableRow>
 
                     <TableRow
@@ -133,15 +133,17 @@
                             android:id="@+id/otherImageView5"
                             android:layout_width="160dp"
                             android:layout_height="90dp"
+                            android:layout_marginBottom="5dp"
                             android:layout_weight="1"
-                            app:srcCompat="@drawable/ic_image_add" />
+                            app:srcCompat="@color/cast_expanded_controller_ad_container_white_stripe_color" />
 
                         <ImageView
                             android:id="@+id/otherImageView6"
                             android:layout_width="160dp"
                             android:layout_height="90dp"
+                            android:layout_marginBottom="5dp"
                             android:layout_weight="1"
-                            app:srcCompat="@drawable/ic_image_add" />
+                            app:srcCompat="@color/cast_expanded_controller_ad_container_white_stripe_color" />
                     </TableRow>
 
                     <TableRow
@@ -152,15 +154,17 @@
                             android:id="@+id/otherImageView7"
                             android:layout_width="160dp"
                             android:layout_height="90dp"
+                            android:layout_marginBottom="5dp"
                             android:layout_weight="1"
-                            app:srcCompat="@drawable/ic_image_add" />
+                            app:srcCompat="@color/cast_expanded_controller_ad_container_white_stripe_color" />
 
                         <ImageView
                             android:id="@+id/otherImageView8"
                             android:layout_width="160dp"
                             android:layout_height="90dp"
+                            android:layout_marginBottom="5dp"
                             android:layout_weight="1"
-                            app:srcCompat="@drawable/ic_image_add" />
+                            app:srcCompat="@color/cast_expanded_controller_ad_container_white_stripe_color" />
                     </TableRow>
                 </TableLayout>
             </ScrollView>
