--- a/app/src/main/res/layout/activity_become_store.xml
+++ b/app/src/main/res/layout/activity_become_store.xml
@@ -53,7 +53,7 @@
                             android:textSize="@dimen/font_size" />
 
                         <EditText
-                            android:id="@+id/e-mailEditText"
+                            android:id="@+id/emailEditText"
                             android:layout_width="wrap_content"
                             android:layout_height="45dp"
                             android:layout_weight="2"
