--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -5,21 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.cce.nkfust.tw.bentoofking.MainActivity">
+    tools:context="com.cce.nkfust.tw.bentoofking.OrderActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="訂購餐點"
+        app:title="便當王"
         />
 
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -31,13 +29,11 @@
             android:orientation="vertical">
 
 
-
             <ListView
-                android:id="@+id/orderMenu"
+                android:id="@+id/mealListView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/orderStatisticsLinearLayout"
-                android:layout_below="@+id/orderButton"></ListView>
+                android:layout_above="@+id/orderStatisticsLinearLayout"></ListView>
 
             <LinearLayout
                 android:id="@+id/orderStatisticsLinearLayout"
@@ -88,10 +84,11 @@
             android:layout_width="240dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="#111"
+            android:background="@drawable/drawlayout_background"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
-            android:dividerHeight="0dp" />
+            android:dividerHeight="0dp">
+        </ListView>
     </android.support.v4.widget.DrawerLayout>
 
 
