--- a/app/src/main/res/layout/activity_edit_member.xml
+++ b/app/src/main/res/layout/activity_edit_member.xml
@@ -72,7 +72,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="@string/passwordcheck"
+                            android:text="@string/OldPassword"
                             android:textColor="@android:color/black"
                             android:textSize="@dimen/font_size" />
 
